--- a/backend-main/requirements.txt
+++ b/backend-main/requirements.txt
@@ -15,18 +15,14 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-numpy==1.26.4
-pandas==2.2.1
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
-pymoo==0.6.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.1
-scikit-learn==1.4.1
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.46.2
@@ -37,3 +33,10 @@ uvicorn==0.34.1
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+pandas>=1.3.0
+numpy>=1.21.0
+scikit-learn>=1.0.0
+pymoo>=0.6.0
+tqdm>=4.60.0
+matplotlib>=3.4.0
+typing-extensions>=4.0.0
