--- a/backend-main/Dockerfile
+++ b/backend-main/Dockerfile
@@ -1,19 +1,22 @@
-# Use Python 3.11 slim image with specific version
-FROM python:3.11.8-slim
+# Use Python 3.13
+FROM python:3.13-slim
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements file
-COPY requirements.txt .
+# Copy the entire virtual environment
+COPY .venv /app/venv
+
+# Set up the virtual environment
+ENV PATH="/app/venv/bin:$PATH"
+ENV VIRTUAL_ENV="/app/venv"
+ENV PYTHONPATH="/app/venv/lib/python3.13/site-packages"
 
 # Copy project files
 COPY . .
-
-RUN pip install -r requirements.txt
 
 # Expose port 8000
 EXPOSE 8000
 
 # Start the FastAPI app with uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"] 
+CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
