--- a/frontend-main/package.json
+++ b/frontend-main/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
     "axios": "^1.8.4",
     "jszip": "^3.10.1",
     "react": "^19.0.0",
